# slimbook-controlpanel

./: com.slimbook.controlpanel.conf  com.slimbook.controlpanel.desktop  com.slimbook.controlpanel.service  default.json  meson.build  resources.qrc
debian/: changelog  control  copyright  slimbook-controlpanel.install
src/: bridge.cpp  bridge.hpp  client.cpp  client.hpp  common.cpp  common.hpp  controlpanel-server.cpp  controlpanel.cpp  meson.build  sensors.cpp  sensors.hpp  server.cpp  server.hpp
ui/: CpuInfo.qml  Graph.qml  MultiValue.qml  Palette.qml  SensorSlot.qml  SlimbookProfile.qml  SystemProfile.qml  TDP.qml  Value.qml  main.qml
